Fix: Invisible input/textarea text for light-on-dark systems

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,12 @@ body > .container
     position: relative;
 }
 
+input, textarea
+{
+    background: white;
+    color: #333;
+}
+
 /* top nav bar */
 
 #top
